src/test/ui/error-codes/E0004-2.stderr
error[E0004]: non-exhaustive patterns: multiple patterns of type `std::option::Option<i32>` are not handled
  --> $DIR/E0004-2.rs:4:11
   |
LL |     match x { }
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
